<resources>
    <string name="app_name">loginpage</string>
    <string name="hint_login_username">请输入手机号码</string>
    <string name="hint_login_password">输入密码</string>
    <string name="login">登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>
    <string name="please_input_limit_phone">请输入数字</string>
    <string name="login_register">注册新用户</string>
    <string name="login_link_mm">联系客服</string>
    <string name="login_about_us">关于我们</string>
</resources>
