<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_FFFFFF">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="13dp"
        android:paddingRight="13dp">

        <FrameLayout
            android:id="@+id/fl_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@mipmap/logo"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_mobile_flag"/>

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login_username"
                android:inputType="textVisiblePassword"
                android:maxLength="11"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/gray_999999"
                android:textColorHint="@color/gray_999999"
                android:textSize="14dp"/>

            <ImageView
                android:id="@+id/iv_clean_phone"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_clear"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_EEEEEE"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_password_flag"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/gray_999999"
                android:textColorHint="@color/gray_999999"
                android:textSize="14dp"/>

            <ImageView
                android:id="@+id/iv_clean_password"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_clear"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/iv_show_pwd"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@mipmap/psw_gone"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_EEEEEE"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/bg_btn_login_selected"
            android:text="@string/login"
            android:textColor="@color/white_FFFFFF"
            android:textSize="18dp"/>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_register"
                android:textColor="@color/gray_B0B8B2"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:text="@string/login_forget_pwd"
                android:textColor="@color/gray_B0B8B2"
                android:textSize="14dp"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/login_link_mm"
            android:textColor="@color/gray_B0B8B2"
            android:textSize="14dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/gray_EEEEEE"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/login_about_us"
            android:textColor="@color/gray_B0B8B2"
            android:textSize="14dp"/>
    </LinearLayout>

</RelativeLayout>